# MT

./: .gitignore  NOTEBOOK_EXECUTION_GUIDE.md  README.md  pyproject.toml  requirements.txt
notebooks/: exploration_01.ipynb  exploration_01_DescriptiveStats_main.ipynb  exploration_01_Descriptive_main.ipynb  exploration_02_OLS.ipynb  exploration_02_OLS_main.ipynb  exploration_03_RandomForest_SetB_main.ipynb  exploration_03_RandomForest_main.ipynb  exploration_04_XGB.ipynb  exploration_04_XGB_SetB_main.ipynb  exploration_04_XGB_main.ipynb  exploration_05_StackingRegressor.ipynb  exploration_main_descriptive_statistics.ipynb
notebooks/archive/: exploration_03_DTR.ipynb
src/: config.py  lists.py  processing.py
src/Master_Thesis.egg-info/: PKG-INFO  SOURCES.txt
tables/: descriptive_statistics.tex  descriptive_statistics_simple.txt  descriptive_statistics_stargazer.tex
