[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Master_Thesis"
version = "1.0.0"
authors = [
  { name="Luis Mauel", email="luis.mauel@student.maastrichtuniversity.nl"},
]
description = "Predicting Operating Cash Flow: A Comparison of Machine Learning and Traditional Models"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
]
keywords = ["machine learning", "cash flow", "forecasting", "finance", "thesis"]

[project.urls]
"Repository" = "https://github.com/your-username/Master_Thesis"
"Documentation" = "https://github.com/your-username/Master_Thesis/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["src"]
